--- a/app/views/daily_workouts/index.html.erb
+++ b/app/views/daily_workouts/index.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <td><%= daily_workout.workout_date %></td>
         <td><%= daily_workout.dailyworkout_check %></td>
-        <td><%= daily_workout.user_id %></td>
+        <td><%= daily_workout.user.email %></td>
         <td><%= daily_workout.weeklyworkout_id %></td>
         <td>
           <a href="/daily_workouts/<%= daily_workout.id %>" class="btn btn-primary">Show</a>
