--- a/app/views/favorite_foods/new.html.erb
+++ b/app/views/favorite_foods/new.html.erb
@@ -33,7 +33,7 @@
           Foods
         </label>
 
-        <input type="text" id="foods_id" name="foods_id" placeholder="Foods" class="form-control" value="<%= @favorite_food.foods_id %>">
+        <%= select_tag(:foods_id, options_from_collection_for_select(Food.all, :id, :food_name, @favorite_food.foods_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for user_id -->
