--- a/app/views/user_cheat_allowances/edit.html.erb
+++ b/app/views/user_cheat_allowances/edit.html.erb
@@ -78,7 +78,7 @@
           Foodscatagory
         </label>
 
-        <input type="text" id="foodscatagory_id" name="foodscatagory_id" placeholder="Foodscatagory" class="form-control" value="<%= @user_cheat_allowance.foodscatagory_id %>">
+        <%= select_tag(:foodscatagory_id, options_from_collection_for_select(FoodsCatagory.all, :id, :created_at, @user_cheat_allowance.foodscatagory_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-warning">
