Replace raw foreign key value in weekly_workouts with primary descriptors

--- a/app/views/weekly_workouts/index.html.erb
+++ b/app/views/weekly_workouts/index.html.erb
@@ -16,7 +16,7 @@
 
       <% @weekly_workouts.each do |weekly_workout| %>
       <tr>
-        <td><%= weekly_workout.user_id %></td>
+        <td><%= weekly_workout.user.email %></td>
         <td><%= weekly_workout.daily_workout_counter %></td>
         <td>
           <a href="/weekly_workouts/<%= weekly_workout.id %>" class="btn btn-primary">Show</a>
