--- a/app/views/user_cheat_allowances/index.html.erb
+++ b/app/views/user_cheat_allowances/index.html.erb
@@ -26,7 +26,7 @@
         <td><%= user_cheat_allowance.cheat_fat %></td>
         <td><%= user_cheat_allowance.cheat_sugar %></td>
         <td><%= user_cheat_allowance.week_date %></td>
-        <td><%= user_cheat_allowance.user_id %></td>
+        <td><%= user_cheat_allowance.user.email %></td>
         <td><%= user_cheat_allowance.foodscatagory_id %></td>
         <td>
           <a href="/user_cheat_allowances/<%= user_cheat_allowance.id %>" class="btn btn-primary">Show</a>
