Replace foreign key text inputs in foods_nutritions with dropdowns

--- a/app/views/foods_nutritions/edit.html.erb
+++ b/app/views/foods_nutritions/edit.html.erb
@@ -24,7 +24,7 @@
           Foods
         </label>
 
-        <input type="text" id="foods_id" name="foods_id" placeholder="Foods" class="form-control" value="<%= @foods_nutrition.foods_id %>">
+        <%= select_tag(:foods_id, options_from_collection_for_select(Food.all, :id, :food_name, @foods_nutrition.foods_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for foodscatagory_id -->
