Replace raw foreign key value in user_cheat_allowances with primary descriptors

--- a/app/views/user_cheat_allowances/index.html.erb
+++ b/app/views/user_cheat_allowances/index.html.erb
@@ -27,7 +27,7 @@
         <td><%= user_cheat_allowance.cheat_sugar %></td>
         <td><%= user_cheat_allowance.week_date %></td>
         <td><%= user_cheat_allowance.user.email %></td>
-        <td><%= user_cheat_allowance.foodscatagory_id %></td>
+        <td><%= user_cheat_allowance.foodscatagory.created_at %></td>
         <td>
           <a href="/user_cheat_allowances/<%= user_cheat_allowance.id %>" class="btn btn-primary">Show</a>
           <a href="/user_cheat_allowances/<%= user_cheat_allowance.id %>/edit" class="btn btn-warning">Edit</a>
