--- a/app/views/foods_catagories/show.html.erb
+++ b/app/views/foods_catagories/show.html.erb
@@ -51,6 +51,71 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_foods_nutrition" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for foods_id -->
+      <div class="form-group">
+        <label for="foods_id" class="control-label">
+          Foods
+        </label>
+
+        <%= select_tag(:foods_id, options_from_collection_for_select(Food.all, :id, :food_name), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for foodscatagory_id -->
+      <div class="form-group">
+        <label for="foodscatagory_id" class="control-label">
+          Foodscatagory
+        </label>
+
+        <%= select_tag(:foodscatagory_id, options_from_collection_for_select(FoodsCatagory.all, :id, :created_at), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for foods_calories -->
+      <div class="form-group">
+        <label for="foods_calories" class="control-label">
+          Foods calories
+        </label>
+
+        <input type="text" id="foods_calories" name="foods_calories" placeholder="Foods calories" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for foods_carbs -->
+      <div class="form-group">
+        <label for="foods_carbs" class="control-label">
+          Foods carbs
+        </label>
+
+        <input type="text" id="foods_carbs" name="foods_carbs" placeholder="Foods carbs" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for foods_fat -->
+      <div class="form-group">
+        <label for="foods_fat" class="control-label">
+          Foods fat
+        </label>
+
+        <input type="text" id="foods_fat" name="foods_fat" placeholder="Foods fat" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for foods_sugar -->
+      <div class="form-group">
+        <label for="foods_sugar" class="control-label">
+          Foods sugar
+        </label>
+
+        <input type="text" id="foods_sugar" name="foods_sugar" placeholder="Foods sugar" class="form-control" value="">
+      </div>
+
+      <button class="btn btn-block btn-success">
+        Create Foods Nutrition
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
@@ -82,6 +147,74 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_user_cheat_allowance" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for cheat_calories -->
+      <div class="form-group">
+        <label for="cheat_calories" class="control-label">
+          Cheat calories
+        </label>
+
+        <input type="text" id="cheat_calories" name="cheat_calories" placeholder="Cheat calories" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for cheat_carbs -->
+      <div class="form-group">
+        <label for="cheat_carbs" class="control-label">
+          Cheat carbs
+        </label>
+
+        <input type="text" id="cheat_carbs" name="cheat_carbs" placeholder="Cheat carbs" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for cheat_fat -->
+      <div class="form-group">
+        <label for="cheat_fat" class="control-label">
+          Cheat fat
+        </label>
+
+        <input type="text" id="cheat_fat" name="cheat_fat" placeholder="Cheat fat" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for cheat_sugar -->
+      <div class="form-group">
+        <label for="cheat_sugar" class="control-label">
+          Cheat sugar
+        </label>
+
+        <input type="text" id="cheat_sugar" name="cheat_sugar" placeholder="Cheat sugar" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for week_date -->
+      <div class="form-group">
+        <label for="week_date" class="control-label">
+          Week date
+        </label>
+
+        <input type="text" id="week_date" name="week_date" placeholder="Week date" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for user_id -->
+      <input type="hidden" name="user_id" value="<%= current_user.id %>">
+
+      <!-- Label and input for foodscatagory_id -->
+      <div class="form-group">
+        <label for="foodscatagory_id" class="control-label">
+          Foodscatagory
+        </label>
+
+        <%= select_tag(:foodscatagory_id, options_from_collection_for_select(FoodsCatagory.all, :id, :created_at), :class => "form-control") %>
+      </div>
+
+      <button class="btn btn-block btn-success">
+        Create User Cheat Allowance
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
