--- a/app/views/user_cheat_allowances/index.html.erb
+++ b/app/views/user_cheat_allowances/index.html.erb
@@ -30,8 +30,11 @@
         <td><%= user_cheat_allowance.foodscatagory.created_at %></td>
         <td>
           <a href="/user_cheat_allowances/<%= user_cheat_allowance.id %>" class="btn btn-primary">Show</a>
-          <a href="/user_cheat_allowances/<%= user_cheat_allowance.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_user_cheat_allowance/<%= user_cheat_allowance.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          
+          <% if current_user == user_cheat_allowance.user %>
+            <a href="/user_cheat_allowances/<%= user_cheat_allowance.id %>/edit" class="btn btn-warning">Edit</a>
+            <a href="/delete_user_cheat_allowance/<%= user_cheat_allowance.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          <% end %>
         </td>
       </tr>
       <% end %>
