--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -55,6 +55,27 @@
           </div>
 
           <div class="form-group">
+            <%= f.label :gender, class: "col-sm-2 control-label" %>
+            <div class="col-sm-10">
+              <%= f.text_field :gender, :class => "form-control", :placeholder => "Enter gender" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :age, class: "col-sm-2 control-label" %>
+            <div class="col-sm-10">
+              <%= f.number_field :age, :class => "form-control", :placeholder => "Enter age" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :activity_level, class: "col-sm-2 control-label" %>
+            <div class="col-sm-10">
+              <%= f.text_field :activity_level, :class => "form-control", :placeholder => "Enter activity level" %>
+            </div>
+          </div>
+
+          <div class="form-group">
             <div class="col-sm-10 col-sm-offset-2">
               <%= f.submit "Update", class: "btn btn-success btn-block" %>
             </div>
