--- a/app/views/favorite_foods/show.html.erb
+++ b/app/views/favorite_foods/show.html.erb
@@ -20,12 +20,14 @@
       <a href="/favorite_foods" class="btn btn-primary">
         Back
       </a>
-      <a href="/favorite_foods/<%= @favorite_food.id %>/edit" class="btn btn-warning">
-        Edit
-      </a>
-      <a href="/delete_favorite_food/<%= @favorite_food.id %>" class="btn btn-danger" rel="nofollow">
-        Delete
-      </a>
+      <% if current_user == @favorite_food.user %>
+        <a href="/favorite_foods/<%= @favorite_food.id %>/edit" class="btn btn-warning">
+          Edit
+        </a>
+        <a href="/delete_favorite_food/<%= @favorite_food.id %>" class="btn btn-danger" rel="nofollow">
+          Delete
+        </a>
+      <% end %>
     </div>
   </div>
 </div>
