--- a/app/views/user_cheat_allowances/index.html.erb
+++ b/app/views/user_cheat_allowances/index.html.erb
@@ -39,5 +39,6 @@
       </tr>
       <% end %>
     </table>
+    <%= paginate @user_cheat_allowances, theme: 'twitter-bootstrap-4' %>
   </div>
 </div>
