--- a/app/views/daily_workouts/index.html.erb
+++ b/app/views/daily_workouts/index.html.erb
@@ -20,8 +20,20 @@
       <tr>
         <td><%= daily_workout.workout_date %></td>
         <td><%= daily_workout.dailyworkout_check %></td>
-        <td><%= daily_workout.user.email %></td>
-        <td><%= daily_workout.weeklyworkout.user_id %></td>
+        <td>
+          <% if daily_workout.user.present? %>
+            <a href="/users/<%= daily_workout.user.id %>">
+              <%= daily_workout.user.email %>
+            </a>
+          <% end %>
+        </td>
+        <td>
+          <% if daily_workout.weeklyworkout.present? %>
+            <a href="/weekly_workouts/<%= daily_workout.weeklyworkout.id %>">
+              <%= daily_workout.weeklyworkout.user_id %>
+            </a>
+          <% end %>
+        </td>
         <td>
           <a href="/daily_workouts/<%= daily_workout.id %>" class="btn btn-primary">Show</a>
           <a href="/daily_workouts/<%= daily_workout.id %>/edit" class="btn btn-warning">Edit</a>
