--- a/app/views/weekly_workouts/show.html.erb
+++ b/app/views/weekly_workouts/show.html.erb
@@ -6,7 +6,13 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>User</dt>
-      <dd><%= @weekly_workout.user_id %></dd>
+      <dd>
+        <% if @weekly_workout.user.present? %>
+          <a href="/users/<%= @weekly_workout.user_id %>">
+            <%= @weekly_workout.user.email %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Daily workout counter</dt>
       <dd><%= @weekly_workout.daily_workout_counter %></dd>
